# leetCode

./: .gitignore  1.go  README.md  copy.sh  delete.sh
1/: main.cpp
114/: main.cpp
1143/: main.cpp
121/: CMakeLists.txt  main.cpp
15/: main.cpp
15.4/: CMakeLists.txt  main.cpp
1503/: main.cpp
16/: main.cpp
167/: main.cpp
169/: CMakeLists.txt  main.cpp
2/: main.cpp
20/: main.cpp
206/: main.cpp
2099/: main.cpp
22/: main.cpp
236/: main.cpp
238/: main.cpp
239/: main.cpp
24/: main.cpp
240/: main.cpp
25/: main.cpp
26/: main.cpp
274/: main.cpp
3/: main.cpp
31/: main.cpp
315/: main.cpp
32/: main.cpp
33/: main.cpp
367/: main.cpp
37/: main.cpp
380/: main.cpp
42/: main.cpp
47/: main.cpp
5/: main.cpp
56/: main.cpp
57/: main.cpp
61/: main.cpp
633/: CMakeLists.txt  main.cpp
680/: main.cpp
684/: main.cpp
69/: main.cpp
746/: main.cpp
76/: main.cpp
80/: CMakeLists.txt  main.cpp
88/: CMakeLists.txt  main.cpp
912/: CMakeLists.txt  main.cpp
92/: main.cpp
996/: main.cpp
LCR 018/: main.cpp
LCR 019/: main.cpp
LCR 020/: main.cpp
LCR 042/: main.cpp
LCR 109/: main.cpp
LCR 118/: main.cpp
LCR 123/: main.cpp
in_1/: main.cpp
interview/: main.cpp
lcr007/: main.cpp
lcr008/: main.cpp
lcr009/: main.cpp
lcr010/: main.cpp
lcr014/: main.cpp  run.sh
lcr015/: main.cpp
lcr017/: main.cpp
lcr018/: main.cpp
lcr020/: main.cpp
lcr114/: main.cpp
lcr120/: main.cpp
lcr138/: main.cpp
lcr168/: main.cpp
lcr180/: main.cpp
pract copy/: main.cpp
temple/: CMakeLists.txt  main.cpp
(+8 files in other folders)
